Replaced the header component from child to parent and made scrollbar fixed to overcome flikering effect

--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -108,11 +108,11 @@
 }
 
 .header .menu-icon .navicon:before {
-  top: 5px;
+  /* top: 5px; */
 }
 
 .header .menu-icon .navicon:after {
-  top: -5px;
+  /* top: -5px; */
 }
 
 /* menu btn */
